--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -5,33 +5,50 @@
     font-family: sans-serif;
 }
 body {
-    background-color: #ffe7d4;
+    background-color: #e3e6ff;
     height: 100vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 20px 20px 20px;
+    padding: 105px 20px 20px 20px;
+}
+#mainPage {
+    max-width: 900px;
 }
 .app-window {
-    min-height: 100px;
-    min-width: 300px;
     width: 100%;
-    height: 100%;
-    max-height: 800px;
-    max-width: 1200px;
+    max-width: 400px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 15px;
+    padding: 20px;
     gap: 10px;
-    filter: drop-shadow(0px 0px 15px rgba(216, 144, 124, 0.62));
+    background-color: #fff;
 }
 .window-header {
     position: absolute;
     top: -27px;
     left: 17px;
     color: #c17f21;
+}
+header {
+    width: calc(100% - 40px);
+    z-index: 3;
+    max-width: 1480px;
+    min-height: 70px;
+    height: fit-content;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+    top: 20px;
+    padding: 15px;
+    background-color: #ffffffab;
+    backdrop-filter: blur(15px);
+    transition-duration: 1s;
 }
 .horizontal-container {
     display: flex;
@@ -48,6 +65,11 @@ body {
 p {
     font-size: 15px;
 }
+.vertical-divisor {
+    height: 40px;
+    width: 1px;
+    background-color: #e3e6ff;
+}
 input, button, .task, textarea {
     height: 40px;
     border: none;
@@ -55,6 +77,7 @@ input, button, .task, textarea {
     padding: 5px 10px 5px 10px;
     font-size: 15px;
     transition-duration: 0.3s;
+    color: black;
 }
 button {
     cursor: pointer;
@@ -75,7 +98,7 @@ textarea {
     background-color: #DDFFDD;
 }
 .incompleted {
-    background-color: #fafafa;
+    background-color: #ffffff;
 }
 .taskWrapper {
     display: flex;
@@ -120,8 +143,10 @@ button:hover, .post:hover {
     display: none;
 }
 .iconButton {
-    height: 32px !important;
-    width: 32px !important;
+    height: 32px;
+    width: 32px;
+    min-height: 32px;
+    min-width: 32px;
     background-color: #00000000;
 }
 .iconButton:hover {
@@ -141,7 +166,13 @@ button:hover, .post:hover {
 .binButton {
     background-image: url("../SVG/bin.svg");
 }
-
+.giganote {
+    background-image: url("../SVG/giganote.svg");
+    height: 32px;
+    width: 32px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 /* HTML: <div class="loader"></div> */
 .loader {
     width: 15px;
@@ -149,8 +180,8 @@ button:hover, .post:hover {
     margin-right: 5px;
     aspect-ratio: 1;
     border-radius: 50%;
-    background: #89bff4;
-    box-shadow: 0 0 0 0 rgba(142, 216, 255, 0.27);
+    background: #e689f4;
+    box-shadow: 0 0 0 0 rgba(193, 142, 255, 0.27);
     animation: l1 1s infinite;
     transition-duration: 0.2s;
 }
@@ -161,4 +192,8 @@ button:hover, .post:hover {
 .loaderHidden {
     scale: 0;
     opacity: 0;
+}
+
+@media screen and (max-width: 600px) {
+
 }
